third_party/move/tools/move-decompiler/tests/compiler-v2-test/reference-safety/v1-borrow-tests/imm_borrow_on_mut_trivial.exp
module 0x8675309::Tester {
    struct X {
        f: u64,
    }
    fun bump_and_give(x_ref: &mut X): &u64 {
        &mut x_ref.f = *&x_ref.f + 1;
        &x_ref.f
    }
    fun contrived_example(x_ref: &mut X): &u64 {
        let _t1 = bump_and_give(x_ref);
        if (!(*_t1 == *&x_ref.f)) abort 42;
        _t1
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid assignment
  ┌─ imm_borrow_on_mut_trivial.move:6:9
  │
6 │         &mut x_ref.f = *&x_ref.f + 1;
  │         ^^^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
